--- a/css/homepage.css
+++ b/css/homepage.css
@@ -99,7 +99,7 @@
 }
 
 .sidebar button {
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
 
 @media (min-width: 768px) {
